Attempting to fix off centered headers
Does not fix the problem, just puts the headers in a different HTML section.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
 * {
-    box-sizing:  border-box;
+    box-sizing: border-box;
 }
 
-body{
+h1 {
+    background-color: gray;
+    color: white;
+    display: block;
+    flex-direction: row;
+    align-items: left;
+    justify-content: left;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+    margin: 0;
+}
+
+body {
     background-color: gray;
     color: white;
     display: flex;
